fix: update neon animation, fix bug with about page jumping after f5

--- a/src/assets/animations/neonFlickering.module.scss
+++ b/src/assets/animations/neonFlickering.module.scss
@@ -22,11 +22,11 @@
         color: inherit;
         text-shadow: $shadow, $shadow, $shadow;
     }
-    90% {
+    85% {
         color: #222;
         text-shadow: none;
     }
-    90.5% {
+    85.5% {
         color: inherit;
         text-shadow: $shadow, $shadow, $shadow;
     }
