--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -3,9 +3,11 @@
     width: 100%;
     @include media('mobile') {
         margin-bottom: $margin;
+        margin-top: $margin;
     }
     @include media('desktop') {
         margin-bottom: $margin-m;
+        margin-top: 0;
     }
 }
 .slide {
@@ -73,5 +75,59 @@
     }
     .swiper-button-next {
         color: $secondary-color !important;
+    }
+
+    // those styles imported in component does not work after build for some reason, so I hard copied them here
+
+    :root {
+        --swiper-navigation-size: 44px;
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        position: absolute;
+        top: 50%;
+        width: calc(var(--swiper-navigation-size) / 44 * 27);
+        height: var(--swiper-navigation-size);
+        margin-top: calc(-1 * var(--swiper-navigation-size) / 2);
+        z-index: 10;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--swiper-navigation-color, var(--swiper-theme-color));
+        &.swiper-button-disabled {
+            opacity: 0.35;
+            cursor: auto;
+            pointer-events: none;
+        }
+        &:after {
+            font-family: swiper-icons;
+            font-size: var(--swiper-navigation-size);
+            text-transform: none !important;
+            letter-spacing: 0;
+            text-transform: none;
+            font-variant: initial;
+            line-height: 1;
+        }
+    }
+    .swiper-button-prev,
+    .swiper-container-rtl .swiper-button-next {
+        &:after {
+            content: 'prev';
+        }
+        left: 10px;
+        right: auto;
+    }
+    .swiper-button-next,
+    .swiper-container-rtl .swiper-button-prev {
+        &:after {
+            content: 'next';
+        }
+        right: 10px;
+        left: auto;
+    }
+
+    .swiper-button-lock {
+        display: none;
     }
 }
